-Fix spacing

--- a/style.css
+++ b/style.css
@@ -29,11 +29,11 @@ body {
 /* Spacing and other properties to the img and info  */
 
 .flex-items img {
-    padding: 1rem 1.9rem;
+    padding: 1.5rem 1.9rem;
 }
 .flex-items .info h1 {
     font-family: 'Big Shoulders Display', cursive;
-    font-size: 2.2rem;
+    font-size: 2.3rem;
     font-weight: 700;
     padding-bottom: 1.5rem;
     text-transform: uppercase;
@@ -46,6 +46,7 @@ body {
 }
 .flex-items .buttons {
     margin-top: 1.5rem;
+    margin-bottom: .5rem;
 }
 /* Button Styling  */
 .btn {
